<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enterCodeLabel">Enter code</string>
    <string name="confirmCode">Confirm</string>
    <string name="discover">Discover</string>
    <string name="connect">Connect</string>
    <string name="unknown">UNKNOWN</string>
    <string name="noQuestion">No question received from server</string>
    <string name="separator">Separator</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="doubleText">Double</string>
    <string name="doubleOrNothingText">Double or Nothing</string>
    <string name="refresh">Refresh</string>

</resources>
