<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:text="@string/connect" />

        <EditText
            android:inputType="text"
            android:id="@+id/serverAddressEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/connectButton"
            android:layout_centerHorizontal="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/codeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/unknown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
    
    <ImageView
        android:contentDescription="@string/separator"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_weight="0"
        android:scaleType="fitXY"
        android:src="@android:drawable/bottom_bar" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/discoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/discover" />

    </RelativeLayout>
</LinearLayout>
